--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </main>
 
         <footer class="rodape">
-            <img class="rodape-imagem" src="ryuky.png" alt="Deuses da morte comem maçãs?" width="500px">
+            <img class="rodape-imagem" src="ryuky.png" alt="Deuses da morte comem maçãs??" width="500px">
         </footer>
         
     </body>
